auto add opens